--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.2.36"
+    "magic-sdk": "^8.1.1",
+    "query-string": "^7.1.1",
+    "vue": "^3.2.36",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.36",
