--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
-    "build-only": "vite build",
+    "build-only": "vite build --minify terser",
     "type-check": "vue-tsc --noEmit",
     "css": "tailwindcss -i ./src/input.css -o ./src/assets/output.css --postcss postcss.config.js --watch"
   },
   "dependencies": {
+    "@formkit/auto-animate": "1.0.0-beta.1",
     "autoprefixer": "^10.4.7",
     "magic-sdk": "^8.1.1",
     "postcss": "^8.4.14",
@@ -28,6 +29,7 @@
     "xstate": "^4.32.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^16.11.36",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
